commit stopList