@@ -2,13 +2,17 @@ package peaksoft.service.impl;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import peaksoft.dto.request.RestaurantRequest;
 import peaksoft.dto.response.RestaurantResponse;
 import peaksoft.dto.response.SimpleResponse;
 import peaksoft.entity.Restaurant;
+import peaksoft.entity.User;
 import peaksoft.exception.BadRequestException;
+import peaksoft.exception.NotFoundException;
 import peaksoft.repository.RestaurantRepository;
+import peaksoft.repository.UserRepository;
 import peaksoft.service.RestaurantService;
 
 import java.util.List;
@@ -18,22 +22,29 @@ import java.util.NoSuchElementException;
 @RequiredArgsConstructor
 public class RestaurantServiceImpl implements RestaurantService {
     private final RestaurantRepository repository;
+    private final UserRepository userRepository;
 
     @Override
     public SimpleResponse saveRestaurant(RestaurantRequest restaurantRequest) {
         if (!repository.findAll().isEmpty()) {
-            throw new BadRequestException("Restaurant one");
+            throw new BadRequestException("You mast save only 1 Restaurant");
         }
-            Restaurant restaurant = new Restaurant();
-            restaurant.setName(restaurantRequest.name());
-            restaurant.setLocation(restaurantRequest.location());
-            restaurant.setRestType(restaurantRequest.restType());
-            restaurant.setService(restaurantRequest.service());
-            repository.save(restaurant);
-            return SimpleResponse.builder()
-                    .status(HttpStatus.OK)
-                    .message(String.format("Restaurant with name %s is successfully saved!", restaurant.getName()))
-                    .build();
+        String email = SecurityContextHolder.getContext().getAuthentication().getName();
+        User user = userRepository.findByEmail(email).orElseThrow(
+                () -> new NotFoundException("User with email: %s not found".formatted(email)));
+        Restaurant restaurant = new Restaurant();
+        restaurant.setName(restaurantRequest.name());
+        restaurant.setLocation(restaurantRequest.location());
+        restaurant.setRestType(restaurantRequest.restType());
+        restaurant.setService(restaurantRequest.service());
+        restaurant.setNumberOfEmployees(restaurantRequest.numberOfUsers());
+        user.setRestaurant(restaurant);
+        repository.save(restaurant);
+        return SimpleResponse.builder()
+                .status(HttpStatus.OK)
+                .message(String.format("Restaurant with name : %s successfully saved ...!",
+                        restaurantRequest.name()))
+                .build();
     }
 
     @Override
@@ -43,11 +54,6 @@ public class RestaurantServiceImpl implements RestaurantService {
 
     @Override
     public SimpleResponse deleteRestaurantById(Long restaurantId) {
-        if (!repository.existsById(restaurantId)) {
-            return SimpleResponse.builder()
-                    .status(HttpStatus.NOT_FOUND)
-                    .message(String.format("Restaurant with id: %s  is NOT FOUND", restaurantId)).build();
-        }
         repository.deleteById(restaurantId);
         return SimpleResponse.builder()
                 .status(HttpStatus.OK).message(String.format("Restaurant with Id: %s is successfully deleted", restaurantId)).build();
@@ -55,9 +61,7 @@ public class RestaurantServiceImpl implements RestaurantService {
 
     @Override
     public SimpleResponse updateRestaurant(Long restaurantId, RestaurantRequest restaurantRequest) {
-        Restaurant restaurant = repository.findById(restaurantId).orElseThrow(() -> new NoSuchElementException(String.format(
-                "Restaurant with id: $s in NOT", restaurantId
-        )));
+        Restaurant restaurant = repository.findById(restaurantId).orElseThrow(() -> new NoSuchElementException(String.format("Restaurant with id: %s in not found", restaurantId)));
         restaurant.setName(restaurantRequest.name());
         restaurant.setLocation(restaurantRequest.location());
         restaurant.setRestType(restaurantRequest.restType());
